--- a/style.css
+++ b/style.css
@@ -1,227 +1,227 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 @font-face {
-    font-family: 'kanji';
-    src: url('/fonts/kanji.ttf');
+  font-family: "kanji";
+  src: url("/fonts/kanji.ttf");
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto Mono', monospace;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Mono", monospace;
 }
 
-body{
-    background-color: #111217;
-    width: 100%;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-    align-items: center;
-    transition: .4s ease-out;
-    overflow: hidden;
-	justify-content: center;
+body {
+  background-color: #111217;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: 0.4s ease-out;
+  overflow: hidden;
+  justify-content: center;
 }
 
-body.dark{
-    background-color: #eeeeee;
-    width: 100%;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+body.dark {
+  background-color: #eeeeee;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-body.dark ~ .column a.git img{
-    filter: none;
+body.dark ~ .column a.git img {
+  filter: none;
 }
 
-#greetings{
-    font-family: 'kanji', monospace;
-    font-size: 40px;
-    color: #EE4F84;
+#greetings {
+  font-family: "kanji", monospace;
+  font-size: 40px;
+  color: #ee4f84;
 }
 
-.input_box{
-	border: none;
-	outline: none;
-	background: transparent;
-	padding: 13px;
-	color: #ffffff;
-	font-size: 17px;
-	transition: 0.4px all;
-	border-radius: 5px 5px 5px 5px;
-	width: 610px;
-    margin-bottom: 30px;
-    transition: .4s ease-in-out;
+.input_box {
+  border: none;
+  outline: none;
+  background: transparent;
+  padding: 13px;
+  color: #ffffff;
+  font-size: 17px;
+  transition: 0.4px all;
+  border-radius: 5px 5px 5px 5px;
+  width: 610px;
+  margin-bottom: 30px;
+  transition: 0.4s ease-in-out;
 }
 
-.left img{
-    width: 365px;
-    margin-right: 20px;
-    -webkit-filter: grayscale(60%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(83%) brightness(60%);
+.left img {
+  width: 365px;
+  margin-right: 20px;
+  -webkit-filter: grayscale(60%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(83%) brightness(60%);
 }
 
-.column-container{
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
+.column-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
-.container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
-.column{
-    display: flex;
-    flex-direction: column;
-    padding: 15px 30px 15px 15px;
-    font-size: 18px;
+.column {
+  display: flex;
+  flex-direction: column;
+  padding: 15px 30px 15px 15px;
+  font-size: 18px;
 }
 
-.column:nth-child(1){
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
+.column:nth-child(1) {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
-.column:nth-child(4){
-	border-top-right-radius: 5px;
-	border-bottom-right-radius: 5px;
+.column:nth-child(4) {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
-.column p{
-    color: #ffffff;
-    padding-bottom: 10px;
-    transition: .4s;
+.column p {
+  color: #ffffff;
+  padding-bottom: 10px;
+  transition: 0.4s;
 }
 
-.column a{
-    text-decoration: none;
-    display: inline-block;
-    color: #44475a;
-    transition: .3s;
-    letter-spacing: 0.6px;
+.column a {
+  text-decoration: none;
+  display: inline-block;
+  color: #44475a;
+  transition: 0.3s;
+  letter-spacing: 0.6px;
 }
 
-.column a.null{
-    opacity: 0;
-    pointer-events: none;
+.column a.null {
+  opacity: 0;
+  pointer-events: none;
 }
 
-.column a:hover{
-    color: #919191;
+.column a:hover {
+  color: #919191;
 }
 
-img{
-    width: 17px;
-    transform: translateY(2px);
-    transition: .4s ease-out;
-    padding-right: 4px;
-    -webkit-filter: grayscale(60%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+img {
+  width: 17px;
+  transform: translateY(2px);
+  transition: 0.4s ease-out;
+  padding-right: 4px;
+  -webkit-filter: grayscale(60%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 
 @media screen and (max-width: 637px) {
-    .container{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media screen and (max-width: 439px) {
-    .container{
-        display: grid;
-        grid-template-columns: 1fr;
-    }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
 
 /* DARK MODE */
 
-#toggle{
-    position: absolute;
-    display: block;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+#toggle {
+  position: absolute;
+  display: block;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
-#toggle span:nth-child(1){
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    display: block;
-    background: transparent;
-    width: 30px;
-    height: 30px;
-    border-bottom: 3px solid #fff;
-    border-radius: 50%;
-    transform: rotate(45deg);
-    filter: blur(0.5px);
-    transition: .4s ease-out;
+#toggle span:nth-child(1) {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: block;
+  background: transparent;
+  width: 30px;
+  height: 30px;
+  border-bottom: 3px solid #fff;
+  border-radius: 50%;
+  transform: rotate(45deg);
+  filter: blur(0.5px);
+  transition: 0.4s ease-out;
 }
 
-#toggle span:nth-child(2){
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    display: block;
-    background: transparent;
-    width: 30px;
-    height: 30px;
-    border-top: 3px solid #fff;
-    border-radius: 50%;
-    transform: rotate(45deg) translateX(-5px) translateY(10px);
-    filter: blur(0.5px);
-    transition: .4s ease-out;
+#toggle span:nth-child(2) {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  display: block;
+  background: transparent;
+  width: 30px;
+  height: 30px;
+  border-top: 3px solid #fff;
+  border-radius: 50%;
+  transform: rotate(45deg) translateX(-5px) translateY(10px);
+  filter: blur(0.5px);
+  transition: 0.4s ease-out;
 }
 
-body.dark #toggle span:nth-child(1){
-    border-bottom: 3px solid #111217;
+body.dark #toggle span:nth-child(1) {
+  border-bottom: 3px solid #111217;
 }
 
-body.dark #toggle span:nth-child(2){
-    border-top: 3px solid transparent;
-    transform: rotate(0deg) translateX(-5px) translateY(10px);
+body.dark #toggle span:nth-child(2) {
+  border-top: 3px solid transparent;
+  transform: rotate(0deg) translateX(-5px) translateY(10px);
 }
 
-body.dark .input_box{
-    color: #111217;
+body.dark .input_box {
+  color: #111217;
 }
 
-body.dark .column p{
-    color: #111217;
+body.dark .column p {
+  color: #111217;
 }
 
-body a#git img{
-    filter: invert(1) grayscale(1);
+body a#git img {
+  filter: invert(1) grayscale(1);
 }
 
-body.dark a#git img{
-    filter: invert(0) grayscale(1);
+body.dark a#git img {
+  filter: invert(0) grayscale(1);
 }
 
-body.dark img{
-    -webkit-filter: grayscale(60%) brightness(1.3); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%) brightness(1.3);
+body.dark img {
+  -webkit-filter: grayscale(60%) brightness(1.3); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%) brightness(1.3);
 }
 
-body.dark #date{
-    color: #111217;
-} 
+body.dark #date {
+  color: #111217;
+}
 
-#date{ 
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    transition: .4s ease-out;
-    color: #ffffff;
-    font-size: 0.9em;
+#date {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  transition: 0.4s ease-out;
+  color: #ffffff;
+  font-size: 0.9em;
 }
